Proyecto/Entrega_Final/data-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-db-mlfow
  namespace: mlops-puj
  labels:
    app: data-db-mlfow
    env: mlops-puj
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-db-mlfow
      env: mlops-puj
  template:
    metadata:
      labels:
        app: data-db-mlfow
        env: mlops-puj
    spec:
      containers:
      - name: data-db-mlfow
        image: postgres
        ports:
        - containerPort: 5432
        command:
        - /bin/bash
        - -c
        args: 
        - ssl=on       
        volumeMounts:
        - mountPath: /data/pgdata
          name: data-mlflow-pv-storage
      volumes:
        - name: data-mlflow-pv-storage
          persistentVolumeClaim:
            claimName: data-mlflow-pv-claim
