Proyecto/Entrega_Final/metadata-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: metadata-db-mlfow-svc
  namespace: mlops-puj
  labels:
    app: metadata-db-mlfow
    env: mlops-puj
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: metadata-db-mlfow
    env: mlops-puj
