Proyecto/Entrega_Final/mlflow-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-svc
  namespace: mlops-puj
  labels:
    app: mlflow
    env: mlops-puj
spec:
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: mlflow
    env: mlops-puj
